--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,28 @@
 @import "tailwindcss";
 
 @theme {
-  --color-primary:#F5F6FA ;
-  --color-secondary:#1C1C1C ;
+  --color-primary:#FFFFFF ;
+  --color-secondary:#f1f1f1 ;
   --color-accent: #007BFF ;
 }
+
+    /* Customize the entire scrollbar */
+    ::-webkit-scrollbar {
+      width: 8px; /* Adjust width as needed */
+    }
+
+    /* Customize the scrollbar track (background) */
+    ::-webkit-scrollbar-track {
+      background-color: transparent; /* Light gray background */
+    }
+
+    /* Customize the scrollbar thumb (draggable part) */
+    ::-webkit-scrollbar-thumb {
+      background-color: #888; /* Dark gray thumb */
+      border-radius: 4px; /* Rounded corners for the thumb */
+    }
+
+    /* Optional: Style on hover */
+    ::-webkit-scrollbar-thumb:hover {
+      background-color: #555; /* Darker gray on hover */
+    }
