--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
   --color-primary:#FFFFFF ;
   --color-secondary:#f1f1f1 ;
   --color-accent: #007BFF ;
+  --color-text: #000000
 }
 
     /* Customize the entire scrollbar */
